--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -1,1 +1,18 @@
-<p>This is the partial for view 1.</p>
+<div class="container-main" >
+    <div class="logo">
+        <img class="" src="images/logo.png">
+    </div>
+
+    <div class="menu-mobile">
+        <ul class="menu">
+            <li><a href="#/view2">NUESTRA MISION</a></li>
+            <li><a href="#/hacemos">QUE HACEMOS</a></li>
+            <li><a href="#/contacto">CONTACTANOS</a></li>
+            <li><a href="#/sabias">SABIAS?</a></li>
+            <li><a href="#/noticia">NOTICIAS</a></li>
+            <li style="border-bottom:0"><a href="#/view2">CHATEA CON NOSOTROS!</a></li>
+        </ul>
+    </div>
+
+</div>
+
