--- a/app/view2/view2.html
+++ b/app/view2/view2.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-fluid">
   <h1>Nuestra Misi&oacute;n</h1>
   <p>
     Siendo un empresa de sistemas forjandose en los &uacute;ltimos a&ntilde;os, nuestra visi&oacute;n del
