--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -1,6 +1,7 @@
+
 <div class="container-main" >
     <div class="logo">
-        <img class="" src="images/logo.png">
+        <img class="logo-size" src="images/logo.png">
     </div>
 
     <div class="menu-mobile">
@@ -10,7 +11,7 @@
             <li><a href="#/contacto">CONTACTANOS</a></li>
             <li><a href="#/sabias">SABIAS?</a></li>
             <li><a href="#/noticia">NOTICIAS</a></li>
-            <li style="border-bottom:0"><a href="#/view2">CHATEA CON NOSOTROS!</a></li>
+            <li style="border-bottom:0;border-right:0;"><a href="#/view2">CHATEA CON NOSOTROS!</a></li>
         </ul>
     </div>
 
