--- a/app/contactanos/contacto.html
+++ b/app/contactanos/contacto.html
@@ -1,30 +1,36 @@
-<div class="container">
-    <h1>Cont&aacute;ctanos:</h1>
-    <div class="controls">
-        <label>Escribe tu nombre:</label>
-        <input type="text" class="form-control">
-    </div>
-    <div class="controls">
-        <label>E-mail:</label>
-        <input type="email" class="form-control">
-    </div>
-    <div class="controls">
-        <label>Asunto:</label>
-        <input type="text" class="form-control">
-    </div>
-    <div class="controls">
-        <label>Consulta:</label>
-        <input type="text" class="form-control">
-    </div>
-
-
-    <div class="btn-group">
-        <div class="arrow-up"></div>
-        <a href="#/view1">Enviar</a>
-    </div>
-
-    <div class="logo">
-        <img class="" src="images/logo.png" width="70px" height="70px">
+<div class="container container-color">
+    <div class="container-info">
+        <h1>Cont&aacute;ctanos:</h1>
+        <div class="contacto-container">
+            <div class="arrow-contacto">
+                <div class="arrow-right"></div>
+            </div>
+            <div class="contacto-controls">
+                <div class="controls">
+                    <label>Escribe tu nombre:</label>
+                    <input type="text" class="form-control">
+                </div>
+                <div class="controls">
+                    <label>E-mail:</label>
+                    <input type="email" class="form-control">
+                </div>
+                <div class="controls">
+                    <label>Asunto:</label>
+                    <input type="text" class="form-control">
+                </div>
+                <div class="controls">
+                    <label>Consulta:</label>
+                    <input type="text" class="form-control">
+                </div>
+            </div>
+        </div>
+        <div class="btn-action">
+            <div class="arrow-up"></div>
+            <a href="" ng-click="appCtrl.goTo({nombre: 'Volver', path: '/view1'});">Enviar</a>
+        </div>
+        <div class="logo-container" style="margin-top: 50px">
+            <img class="" src="images/logo.png" width="70px" height="70px">
+        </div>
     </div>
 </div>
 
