--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -1,17 +1,29 @@
 
-<div class="container-main" >
-    <div class="logo">
+<div class="container" ng-controller="MainController as mainCtrl">
+    <div class="logo-container">
         <img class="logo-size" src="images/logo.png">
     </div>
 
-    <div class="menu-mobile">
-        <ul class="menu">
-            <li><a href="#/view2">NUESTRA MISION</a></li>
-            <li><a href="#/hacemos">QUE HACEMOS</a></li>
-            <li><a href="#/contacto">CONTACTANOS</a></li>
-            <li><a href="#/sabias">SABIAS?</a></li>
-            <li><a href="#/noticia">NOTICIAS</a></li>
-            <li style="border-bottom:0;border-right:0;"><a href="#/view2">CHATEA CON NOSOTROS!</a></li>
+    <div class="menu-principal">
+        <ul class="menu-ul">
+            <li>
+                <a href="" ng-click="appCtrl.goTo({nombre: 'NUESTRA MISION', path: '/view2'});">NUESTRA MISION</a>
+            </li>
+            <li>
+                <a href="" ng-click="appCtrl.goTo({nombre: 'QUE HACEMOS', path: '/hacemos'});">QUE HACEMOS</a>
+            </li>
+            <li>
+                <a href="" ng-click="appCtrl.goTo({nombre: 'CONTACTANOS', path: '/contacto'});">CONTACTANOS</a>
+            </li>
+            <li>
+                <a href="" ng-click="appCtrl.goTo({nombre: 'SABIAS', path: '/sabias'});">SABIAS?</a>
+            </li>
+            <li>
+                <a href="" ng-click="appCtrl.goTo({nombre: 'NOTICIAS', path: '/noticia'});">NOTICIAS</a>
+            </li>
+            <li style="border-bottom:0;border-right:0;">
+                <a href="" ng-click="appCtrl.goTo({nombre: 'CHATEA CON NOSOTROS', path: '/view1'});">CHATEA CON NOSOTROS!</a>
+            </li>
         </ul>
     </div>
 
