--- a/app/view2/view2.html
+++ b/app/view2/view2.html
@@ -1,25 +1,28 @@
-<div class="container-fluid">
-  <h1>Nuestra Misi&oacute;n</h1>
-  <p>
-    Siendo un empresa de sistemas forjandose en los &uacute;ltimos a&ntilde;os, nuestra visi&oacute;n del
-    mercado es muy diferente de las empresas tradicionales Argentinas. Nuestro objetivo
-    es el servicio y servicio solo lo entendemos por entregar el producto, lo entedemos por
-    entregar el producto y establecer una relaci&oacute;n con el cliente de soporte y crecimiento.
-  </p>
-  <p>
-    Las tecnolog&iacute;as crecen a pasos agigantados a&ntilde;o tras a&ntilde;o, y imposible manejar un
-    negocio propio y mantenerse informado de todos estos avances. Nosotros queremos ser
-    tus asesores y socios en este crecimiento. Nos gusta aprender de tecnolog&iacute;a y ver
-    como aplicarla para que el d&iacute;a a d&iacute;a sea mas f&aacute;cil, mas llevadero y mas lucrativo para
-    nuestros clientes. <strong>Tu crecimiento es nuestro objetivo.</strong>
-  </p>
-  </p>
-  Sabemos que la tecnolog&iacute;a es un dolor de cabeza, pero no tiene porque serlo, la tecnolog&iacute;a tiene que ser
-  una compa&ntilde;era y una herramienta. <strong>Nuestra misi&oacute;n es tu satisfacci&oacute;n.</strong>
-  </p>
+<div class="container container-color">
+  <div class="container-info">
+    <h1>Nuestra Misi&oacute;n</h1>
+    <p>
+      Siendo un empresa de sistemas forjandose en los &uacute;ltimos a&ntilde;os, nuestra visi&oacute;n del
+      mercado es muy diferente de las empresas tradicionales Argentinas. Nuestro objetivo
+      es el servicio y servicio solo lo entendemos por entregar el producto, lo entedemos por
+      entregar el producto y establecer una relaci&oacute;n con el cliente de soporte y crecimiento.
+    </p>
+    <p>
+      Las tecnolog&iacute;as crecen a pasos agigantados a&ntilde;o tras a&ntilde;o, y imposible manejar un
+      negocio propio y mantenerse informado de todos estos avances. Nosotros queremos ser
+      tus asesores y socios en este crecimiento. Nos gusta aprender de tecnolog&iacute;a y ver
+      como aplicarla para que el d&iacute;a a d&iacute;a sea mas f&aacute;cil, mas llevadero y mas lucrativo para
+      nuestros clientes. <strong>Tu crecimiento es nuestro objetivo.</strong>
+    </p>
+    </p>
+    Sabemos que la tecnolog&iacute;a es un dolor de cabeza, pero no tiene porque serlo, la tecnolog&iacute;a tiene que ser
+    una compa&ntilde;era y una herramienta. <strong>Nuestra misi&oacute;n es tu satisfacci&oacute;n.</strong>
+    </p>
 
-  <div class="back">
-    <div class="arrow-left"><a href="#/view1">Volver</a></div>
+    <div class="back">
+      <div class="arrow-left"></div>
+      <a href="" ng-click="appCtrl.goTo({nombre: 'Volver', path: '/view1'});">Volver</a>
+    </div>
   </div>
 </div>
 
