Diseño y se agregaron fuentes

--- a/app/chat/chat.html
+++ b/app/chat/chat.html
@@ -1,6 +1,6 @@
 <div class="container container-color container-menu-margin">
     <div class="container-info">
-        <h1 class="color-primary">Cont&aacute;ctanos:</h1>
+        <h1 class="color-primary">CHAT</h1>
         <div class="contacto-container">
             <div class="arrow-contacto">
                 <div class="arrow-right"></div>
@@ -14,22 +14,11 @@
                     <label>E-mail:</label>
                     <input type="email" class="form-control">
                 </div>
-                <div class="controls">
-                    <label>Asunto:</label>
-                    <input type="text" class="form-control">
-                </div>
-                <div class="controls">
-                    <label>Consulta:</label>
-                    <input type="text" class="form-control">
-                </div>
             </div>
         </div>
         <div class="btn-action">
             <div class="arrow-up"></div>
-            <a href="" ng-click="appCtrl.goTo({nombre: 'Volver', path: '/main'});">Enviar</a>
-        </div>
-        <div class="logo-container" style="margin-top: 50px">
-            <img class="" src="images/logo.png" width="70px" height="70px">
+            <a href="" ng-click="appCtrl.goTo({nombre: 'Volver', path: '/main'});">Ingresar</a>
         </div>
     </div>
 </div>
