--- a/app/main/main.html
+++ b/app/main/main.html
@@ -7,7 +7,7 @@
     <div class="menu-principal">
         <ul class="menu-ul">
             <li>
-                <a href="" ng-click="appCtrl.goTo({nombre: 'NUESTRA MISION', path: '/view2'});">NUESTRA MISION</a>
+                <a href="" ng-click="appCtrl.goTo({nombre: 'NUESTRA MISION', path: '/mision'});">NUESTRA MISION</a>
             </li>
             <li>
                 <a href="" ng-click="appCtrl.goTo({nombre: 'QUE HACEMOS', path: '/hacemos'});">QUE HACEMOS</a>
@@ -19,10 +19,10 @@
                 <a href="" ng-click="appCtrl.goTo({nombre: 'SABIAS', path: '/sabias'});">SABIAS?</a>
             </li>
             <li>
-                <a href="" ng-click="appCtrl.goTo({nombre: 'NOTICIAS', path: '/noticia'});">NOTICIAS</a>
+                <a href="" ng-click="appCtrl.goTo({nombre: 'NOTICIAS', path: '/noticias'});">NOTICIAS</a>
             </li>
             <li style="border-bottom:0;border-right:0;">
-                <a href="" ng-click="appCtrl.goTo({nombre: 'CHATEA CON NOSOTROS', path: '/view1'});">CHATEA CON NOSOTROS!</a>
+                <a href="" ng-click="appCtrl.goTo({nombre: 'CHATEA CON NOSOTROS', path: '/chat'});">CHATEA CON NOSOTROS!</a>
             </li>
         </ul>
     </div>
