--- a/app/mision/mision.html
+++ b/app/mision/mision.html
@@ -1,4 +1,4 @@
-<div class="container container-color">
+<div class="container container-color container-menu-margin">
   <div class="container-info">
     <h1>Nuestra Misi&oacute;n</h1>
     <p>
@@ -21,7 +21,7 @@
 
     <div class="back">
       <div class="arrow-left"></div>
-      <a href="" ng-click="appCtrl.goTo({nombre: 'Volver', path: '/view1'});">Volver</a>
+      <a href="" ng-click="appCtrl.goTo({nombre: 'Volver', path: '/main'});">Volver</a>
     </div>
   </div>
 </div>
