--- a/app/hacemos/hacemos.html
+++ b/app/hacemos/hacemos.html
@@ -1,4 +1,4 @@
-<div class="container container-color">
+<div class="container container-color container-menu-margin">
     <div class="container-info">
         <h1>Que hacemos?</h1>
         <h3>Ecommerce, Mcommerce y Comercio Social:</h3>
@@ -20,7 +20,7 @@
 
         <div class="back">
             <div class="arrow-left"></div>
-            <a href="" ng-click="appCtrl.goTo({nombre: 'Volver', path: '/view1'});">Volver</a>
+            <a href="" ng-click="appCtrl.goTo({nombre: 'Volver', path: '/main'});">Volver</a>
         </div>
     </div>
 </div>
