--- a/app/index.html
+++ b/app/index.html
@@ -1,8 +1,4 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html lang="en" ng-app="acDesarrollos" class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html lang="en" ng-app="acDesarrollos" class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html lang="en" ng-app="acDesarrollos" class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html lang="en" ng-app="acDesarrollos" class="no-js"> <!--<![endif]-->
 <head>
   <!--meta charset="utf-8"-->
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
@@ -10,8 +6,7 @@
   <title>AC-Desarrollos</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!--link rel="stylesheet" href="app.css"-->
-  <link href="stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
+
   <link rel="apple-touch-icon" sizes="57x57" href="img/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="img/apple-icon-60x60.png">
   <link rel="apple-touch-icon" sizes="72x72" href="img/apple-icon-72x72.png">
@@ -25,10 +20,132 @@
   <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="96x96" href="img/favicon-96x96.png">
   <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
-  <link rel="manifest" href="/manifest.json">
+  <link rel="manifest" href="images/manifest.json">
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="msapplication-TileImage" content="img/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
+
+    <script>
+        // Cargo las configuraciones para la app
+        window.appName = 'acDesarrollos';
+        window.installPath = 'bower_components';
+
+        // include angular loader, which allows the files to load in any order
+        //@@NG_LOADER_START@@
+        /*
+         AngularJS v1.4.7
+         (c) 2010-2015 Google, Inc. http://angularjs.org
+         License: MIT
+         */
+
+        //# sourceMappingURL=bower_components/angular-loader/angular-loader.min.js.map
+
+        //@@NG_LOADER_END@@
+
+        // include a third-party async loader library
+        /*!
+         * $script.js v1.3
+         * https://github.com/ded/script.js
+         * Copyright: @ded & @fat - Dustin Diaz, Jacob Thornton 2011
+         * Follow our software http://twitter.com/dedfat
+         * License: MIT
+         */
+        !function (a, b, c) {
+            function t(a, c) {
+                var e = b.createElement("script"), f = j;
+                e.onload = e.onerror = e[o] = function () {
+                    e[m] && !/^c|loade/.test(e[m]) || f || (e.onload = e[o] = null, f = 1, c())
+                }, e.async = 1, e.src = a, d.insertBefore(e, d.firstChild)
+            }
+
+            function q(a, b) {
+                p(a, function (a) {
+                    return !b(a)
+                })
+            }
+
+            var d = b.getElementsByTagName("head")[0], e = {}, f = {}, g = {}, h = {}, i = "string", j = !1, k = "push", l = "DOMContentLoaded", m = "readyState", n = "addEventListener", o = "onreadystatechange", p = function (a, b) {
+                for (var c = 0, d = a.length; c < d; ++c)if (!b(a[c]))return j;
+                return 1
+            };
+            !b[m] && b[n] && (b[n](l, function r() {
+                b.removeEventListener(l, r, j), b[m] = "complete"
+            }, j), b[m] = "loading");
+            var s = function (a, b, d) {
+                function o() {
+                    if (!--m) {
+                        e[l] = 1, j && j();
+                        for (var a in g)p(a.split("|"), n) && !q(g[a], n) && (g[a] = [])
+                    }
+                }
+
+                function n(a) {
+                    return a.call ? a() : e[a]
+                }
+
+                a = a[k] ? a : [a];
+                var i = b && b.call, j = i ? b : d, l = i ? a.join("") : b, m = a.length;
+                c(function () {
+                    q(a, function (a) {
+                        h[a] ? (l && (f[l] = 1), o()) : (h[a] = 1, l && (f[l] = 1), t(s.path ? s.path + a + ".js" : a, o))
+                    })
+                }, 0);
+                return s
+            };
+            s.get = t, s.ready = function (a, b, c) {
+                a = a[k] ? a : [a];
+                var d = [];
+                !q(a, function (a) {
+                    e[a] || d[k](a)
+                }) && p(a, function (a) {
+                    return e[a]
+                }) ? b() : !function (a) {
+                    g[a] = g[a] || [], g[a][k](b), c && c(d)
+                }(a.join("|"));
+                return s
+            };
+            var u = a.$script;
+            s.noConflict = function () {
+                a.$script = u;
+                return this
+            }, typeof module != "undefined" && module.exports ? module.exports = s : a.$script = s
+        }(this, document, setTimeout);
+
+        // load all of the dependencies asynchronously.
+        $script(['bower_components/angular/angular.min.js'], 'primero');
+        $script.ready('primero', function () {
+            $script([
+                'bower_components/angular-route/angular-route.min.js',
+                'bower_components/oclazyload/dist/ocLazyLoad.min.js',
+                //'bower_components/angular-cookies/angular-cookies.min.js',
+                'bower_components/angular-animate/angular-animate.min.js'
+            ], 'segundo');
+
+            $script.ready('segundo', function () {
+                $script(['app.js'], 'tercero');
+
+                $script.ready('tercero', function () {
+                    angular.bootstrap(document, ['acDesarrollos']);
+                });
+            });
+        });
+
+    </script>
+
+    <!--<link rel="stylesheet" href="stylesheets/screen.css">-->
+    <script>
+        var cb = function () {
+            var l = document.createElement('link');
+            l.rel = 'stylesheet';
+            l.href = 'stylesheets/screen.css';
+            var h = document.getElementsByTagName('head')[0];
+            h.parentNode.insertBefore(l, h);
+        };
+        var raf = requestAnimationFrame || mozRequestAnimationFrame ||
+                webkitRequestAnimationFrame || msRequestAnimationFrame;
+        if (raf) raf(cb);
+        else window.addEventListener('load', cb);
+    </script>
 
 </head>
 <body ng-controller="AppController as appCtrl">
@@ -44,8 +161,6 @@
         <div ng-class="{'nav-button-bot-transformed':appCtrl.menu_mobile_open}"></div>
       </div>
 
-      <!--div class="header-separator"></div>
-      <div class="bienvenidos">Bienvenidos</div-->
       <div class="logo">
         <img src="images/logo.png" alt="logo" height="45px" width="150px">
       </div>
@@ -62,7 +177,7 @@
           <div id="menu-desktop-lower-inner">
             <div class="menu-desktop-btn ac-ripple" style="border-right: 2px solid #a1cca5;"
                  ng-class="{'menu-desktop-btn-selected':appCtrl.selectedPage.indexOf('NUESTRA MISION') > -1 }"
-                 ng-click="appCtrl.goTo({nombre: 'NUESTRA MISION', path: '/view2'});"> NUESTRA MISION
+                 ng-click="appCtrl.goTo({nombre: 'NUESTRA MISION', path: '/mision'});"> NUESTRA MISION
             </div>
             <div class="menu-desktop-btn ac-ripple" style="border-right: 2px solid #a1cca5;"
                  ng-class="{'menu-desktop-btn-selected':appCtrl.selectedPage.indexOf('QUE HACEMOS') > -1 }"
@@ -78,16 +193,16 @@
             </div>
             <div class="menu-desktop-btn ac-ripple" style="border-right: 2px solid #a1cca5;"
                  ng-class="{'menu-desktop-btn-selected':appCtrl.selectedPage.indexOf('NOTICIAS') > -1 }"
-                 ng-click="appCtrl.goTo({nombre: 'NOTICIAS', path: '/noticia'});"> NOTICIAS
+                 ng-click="appCtrl.goTo({nombre: 'NOTICIAS', path: '/noticias'});"> NOTICIAS
             </div>
             <div class="menu-desktop-btn ac-ripple"
                  ng-class="{'menu-desktop-btn-selected':appCtrl.selectedPage.indexOf('CHATEA CON NOSOTROS') > -1 }"
-                 ng-click="appCtrl.goTo({nombre: 'CHATEA CON NOSOTROS', path: '/view1'});"> CHATEA CON NOSOTROS!
+                 ng-click="appCtrl.goTo({nombre: 'CHATEA CON NOSOTROS', path: '/chat'});"> CHATEA CON NOSOTROS!
             </div>
-            <div class="menu-desktop-btn ac-ripple"
+            <!--div class="menu-desktop-btn ac-ripple"
                  ng-class="{'menu-desktop-btn-selected':appCtrl.selectedPage.indexOf(appCtrl.links[6].nombre) > -1 }"
                  ng-click="appCtrl.goTo({nombre: 'INGRESO', path: '/ingreso'});">{{appCtrl.links[6].nombre}}
-            </div>
+            </div-->
           </div>
         </div>
       </div>
@@ -105,10 +220,6 @@
 
   <div ng-view class="view-container" autoscroll="true"></div>
 
-  <!--div class="flex-content">
-    <div ng-view class="container"></div>
-  </div-->
-
   <div class="footer">
     <p>
       © 2016 - <a href="http://ac-desarrollos.com/" class="footer-link">www.ac-desarrollos.com </a>
@@ -116,16 +227,5 @@
       All Rights Reserved</p>
   </div>
 
-
-
-  <script src="bower_components/angular/angular.js"></script>
-  <script src="bower_components/angular-route/angular-route.js"></script>
-  <script src="app.js"></script>
-  <script src="view1/view1.js"></script>
-  <script src="view2/view2.js"></script>
-  <script src="contactanos/contacto.js"></script>
-  <script src="noticias/noticia.js"></script>
-  <script src="sabias/sabias.js"></script>
-  <script src="hacemos/hacemos.js"></script>
 </body>
 </html>
