--- a/app/main/main.html
+++ b/app/main/main.html
@@ -1,31 +1,31 @@
 
-<div class="container" ng-controller="MainController as mainCtrl">
-    <div class="logo-container">
-        <img class="logo-size" src="images/logo.png">
-    </div>
+<!--<div class="container" ng-controller="MainController as mainCtrl">-->
+    <!--<div class="logo-container">-->
+        <!--<img class="logo-size" src="images/logo.png">-->
+    <!--</div>-->
 
-    <div class="menu-principal">
-        <ul class="menu-ul">
-            <li>
-                <a href="" ng-click="appCtrl.goTo({nombre: 'NUESTRA MISION', path: '/mision'});">NUESTRA MISION</a>
-            </li>
-            <li>
-                <a href="" ng-click="appCtrl.goTo({nombre: 'QUE HACEMOS', path: '/hacemos'});">QUE HACEMOS</a>
-            </li>
-            <li>
-                <a href="" ng-click="appCtrl.goTo({nombre: 'CONTACTANOS', path: '/contacto'});">CONTACTANOS</a>
-            </li>
-            <li>
-                <a href="" ng-click="appCtrl.goTo({nombre: 'SABIAS', path: '/sabias'});">SABIAS?</a>
-            </li>
-            <li>
-                <a href="" ng-click="appCtrl.goTo({nombre: 'NOTICIAS', path: '/noticias'});">NOTICIAS</a>
-            </li>
-            <li style="border-bottom:0;border-right:0;">
-                <a href="" ng-click="appCtrl.goTo({nombre: 'CHATEA CON NOSOTROS', path: '/chat'});">CHATEA CON NOSOTROS!</a>
-            </li>
-        </ul>
-    </div>
+    <!--<div class="menu-principal">-->
+        <!--<ul class="menu-ul">-->
+            <!--<li>-->
+                <!--<a href="" ng-click="appCtrl.goTo({nombre: 'NUESTRA MISION', path: '/mision'});">NUESTRA MISION</a>-->
+            <!--</li>-->
+            <!--<li>-->
+                <!--<a href="" ng-click="appCtrl.goTo({nombre: 'QUE HACEMOS', path: '/hacemos'});">QUE HACEMOS</a>-->
+            <!--</li>-->
+            <!--<li>-->
+                <!--<a href="" ng-click="appCtrl.goTo({nombre: 'CONTACTANOS', path: '/contacto'});">CONTACTANOS</a>-->
+            <!--</li>-->
+            <!--<li>-->
+                <!--<a href="" ng-click="appCtrl.goTo({nombre: 'SABIAS', path: '/sabias'});">SABIAS?</a>-->
+            <!--</li>-->
+            <!--<li>-->
+                <!--<a href="" ng-click="appCtrl.goTo({nombre: 'NOTICIAS', path: '/noticias'});">NOTICIAS</a>-->
+            <!--</li>-->
+            <!--<li style="border-bottom:0;border-right:0;">-->
+                <!--<a href="" ng-click="appCtrl.goTo({nombre: 'CHATEA CON NOSOTROS', path: '/chat'});">CHATEA CON NOSOTROS!</a>-->
+            <!--</li>-->
+        <!--</ul>-->
+    <!--</div>-->
 
-</div>
+<!--</div>-->
 
