--- a/app/index.html
+++ b/app/index.html
@@ -148,7 +148,7 @@
     </script>
 
 </head>
-<body ng-controller="AppController as appCtrl">
+<body ng-controller="AppController as appCtrl" style="position: relative;">
 
   <div class="header"
        ng-class="{'display-header': !appCtrl.display_header, 'header-as-main': appCtrl.selectedPage == 'INICIO'}">
