--- a/app/index.html
+++ b/app/index.html
@@ -118,7 +118,9 @@
                 'bower_components/angular-route/angular-route.min.js',
                 'bower_components/oclazyload/dist/ocLazyLoad.min.js',
                 //'bower_components/angular-cookies/angular-cookies.min.js',
-                'bower_components/angular-animate/angular-animate.min.js'
+                'bower_components/angular-animate/angular-animate.min.js',
+                'bower_components/ac-angular-utils/ac-utils.min.js',
+                'bower_components/ac-angular-contacts/ac-contacts.min.js'
             ], 'segundo');
 
             $script.ready('segundo', function () {
