--- a/app/contactanos/contacto.html
+++ b/app/contactanos/contacto.html
@@ -29,7 +29,7 @@
             <a href="" ng-click="contactoCtrl.sendMail();">Enviar</a>
         </div>
         <div class="logo-container" style="margin-top: 50px">
-            <img class="" src="images/logo.png" width="70px" height="70px">
+            <img class="" src="images/logo.png" width="140px">
         </div>
     </div>
 </div>
