--- a/app/sabias/sabias.html
+++ b/app/sabias/sabias.html
@@ -4,7 +4,20 @@
             <h1>Sab&iacute;as qué?</h1>
             <div class="sabias-container">
                 <div class="sabias-container-2">
-
+                    <div id="main-slider">
+                        <div ng-class="{'show-slider-proyecto':sabiasCtrl.slider_nro == 1}" class="main-slider-proyecto">
+                            <h3 class="color-default">Estadistica 1</h3>
+                        </div>
+                        <div ng-class="{'show-slider-proyecto':sabiasCtrl.slider_nro == 2}" class="main-slider-proyecto">
+                            <h3 class="color-primary">Estadistica 2</h3>
+                        </div>
+                        <div ng-class="{'show-slider-proyecto':sabiasCtrl.slider_nro == 3}" class="main-slider-proyecto">
+                            <h3 class="color-default">Estadistica 3</h3>
+                        </div>
+                        <div ng-class="{'show-slider-proyecto':sabiasCtrl.slider_nro == 4}" class="main-slider-proyecto">
+                            <h3 class="color-primary">Estadistica 4</h3>
+                        </div>
+                    </div>
                 </div>
             </div>
 
