--- a/app/noticias/noticias.html
+++ b/app/noticias/noticias.html
@@ -3,16 +3,11 @@
         <h1>Noticias</h1>
         <div class="noticia-container">
             <div class="noticia-foto">
-                <img src="" title="Foto 1" alt="Foto 1">
+                <img src="https://play.google.com/books/publish/static/images/google-search.png" title="Foto 1" alt="Foto 1">
             </div>
             <div class="noticia-info">
-                <h5>Titulo 1:</h5>
-                <p>
-                    Siendo un empresa de sistemas forjandose en los &uacute;ltimos a&ntilde;os, nuestra visi&oacute;n del
-                    mercado es muy diferente de las empresas tradicionales Argentinas. Nuestro objetivo
-                    es el servicio y servicio solo lo entendemos por entregar el producto, lo entedemos por
-                    entregar el producto y establecer una relaci&oacute;n con el cliente de soporte y crecimiento.
-                </p>
+                <h5>GOOGLE REGALA 2GB A QUIENES CHEQUEEN SU SEGURIDAD DIGITAL:</h5>
+                <p>La empresa del buscador regala almacenamiento en Drive a aquellos que verifiquen su configuración. Es una campaña por el "Día de Internet más seguro". Hay tiempo hasta el 11 de febrero.</p>
                 <a href="" ng-click="appCtrl.goTo({nombre: 'Ver', path: '/noticia'});">Ver</a>
             </div>
         </div>
