--- a/app/chat/chat.html
+++ b/app/chat/chat.html
@@ -1,25 +1,47 @@
-<div class="container container-color container-menu-margin">
-    <div class="container-info">
+<div ng-controller="ChatController as chatCtrl" class="container container-color container-menu-margin">
+    <div class="container-info" form-id="contacto">
         <h1 class="color-primary">CHAT</h1>
-        <div class="contacto-container">
-            <div class="arrow-contacto">
-                <div class="arrow-right"></div>
+        <div class="chat-container" id="contacto-form" ng-if="!chatCtrl.chatIsLogged">
+            <div class="chat-container-login">
+                <div class="arrow-contacto">
+                    <div class="arrow-right"></div>
+                </div>
+                <div id="login-chat" class="contacto-controls" >
+                    <div class="controls">
+                        <label>Escribe tu nombre:</label>
+                        <input ac-validator is-required="Debe ingresar un nombre" type="text"
+                               class="form-control" ng-model="chatCtrl.nombre" id="contacto-nombre">
+                    </div>
+                    <div class="controls">
+                        <label>E-mail:</label>
+                        <input ac-validator is-mail="El mail es incorrecto" type="email"
+                               class="form-control" ng-model="chatCtrl.email" id="contacto-mail">
+                    </div>
+                </div>
             </div>
-            <div class="contacto-controls">
-                <div class="controls">
-                    <label>Escribe tu nombre:</label>
-                    <input type="text" class="form-control">
-                </div>
-                <div class="controls">
-                    <label>E-mail:</label>
-                    <input type="email" class="form-control">
-                </div>
+            <div class="btn-chat">
+                <div class="arrow-up" style="margin-right: 15px;"></div>
+                <!--a href="" ng-click="appCtrl.goTo({nombre: 'Volver', path: '/main'});">Ingresar</a-->
+                <button id="contacto-enviar-mobile" ac-validator ng-click="chatCtrl.loginChat();">Ingresar</button>
             </div>
         </div>
-        <div class="btn-action">
-            <div class="arrow-up"></div>
-            <a href="" ng-click="appCtrl.goTo({nombre: 'Volver', path: '/main'});">Ingresar</a>
+
+        <div class="chat-container" id="" ng-if="chatCtrl.chatIsLogged">
+            <div class="chat-container-login">
+                <div class="arrow-contacto">
+                    <div class="arrow-right"></div>
+                </div>
+
+                <div id="message-chat" class="contacto-controls" >
+                    <div class="controls">
+                        <div id="message"></div>
+                    </div>
+                </div>
+            </div>
+            <input id="texto-mensaje" ng-model="chatCtrl.message"
+                   ng-keypress="chatCtrl.sendChat($event);" type="text">
         </div>
+
     </div>
 </div>
 
