--- a/app/index.html
+++ b/app/index.html
@@ -120,7 +120,8 @@
                 //'bower_components/angular-cookies/angular-cookies.min.js',
                 'bower_components/angular-animate/angular-animate.min.js',
                 'bower_components/ac-angular-utils/ac-utils.min.js',
-                'bower_components/ac-angular-contacts/ac-contacts.min.js'
+                'bower_components/ac-angular-contacts/ac-contacts.min.js',
+                'https://cdn.firebase.com/js/client/2.2.1/firebase.js'
             ], 'segundo');
 
             $script.ready('segundo', function () {
