Hacer responsiva la página para mobiles

--- a/app/contactanos/contacto.html
+++ b/app/contactanos/contacto.html
@@ -1,7 +1,7 @@
 <div ng-controller="ContactoController as contactoCtrl" class="container container-color container-menu-margin">
     <div class="container-info" form-id="contacto">
         <h1 class="color-primary">Cont&aacute;ctanos:</h1>
-        <div class="contacto-container" id="contacto-form">
+        <div class="contacto-container" id="contacto-form" style="margin-top:30px;">
             <div class="arrow-contacto">
                 <div class="arrow-right"></div>
             </div>
@@ -33,7 +33,7 @@
             <!--a href="" ng-click="contactoCtrl.sendMail();">Enviar</a-->
             <button id="contacto-enviar-mobile" ac-validator ng-click="contactoCtrl.sendMail();">Enviar</button>
         </div>
-        <div class="logo-container" style="margin-top: 150px">
+        <div class="logo-container" style="margin-top: 15%">
             <img class="" src="images/logo.png" width="140px">
         </div>
     </div>
